oops... jenkins no like

--- a/templates/job-config.xml
+++ b/templates/job-config.xml
@@ -18,7 +18,9 @@
   <builders>
     <hudson.tasks.Shell>
       <command>#!/bin/bash
-        $JENKINS_HOME/jobs/$charm_name/test-setup.sh && $JENKINS_HOME/jobs/$charm_name/test-install.sh
+        $JENKINS_HOME/jobs/$charm_name/test-setup.sh
+        $JENKINS_HOME/jobs/$charm_name/test-install.sh
+        # make sure this always gets called... i.e., do this in python
         $JENKINS_HOME/jobs/$charm_name/test-teardown.sh
       </command>
     </hudson.tasks.Shell>
