--- a/templates/job-config.xml
+++ b/templates/job-config.xml
@@ -16,8 +16,9 @@
     <hudson.tasks.Shell>
       <command>#!/bin/bash
         #charm test $job_name
-        sudo -Esu jenkins set
-        sudo -Esu jenkins \$HOME/bin/charm-test $charm_name
+        export HOME=\$JENKINS_HOME
+        sudo -HEsu jenkins set
+        sudo -HEsu jenkins \$HOME/bin/charm-test $charm_name
       </command>
     </hudson.tasks.Shell>
   </builders>
