--- a/templates/job-config.xml
+++ b/templates/job-config.xml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='UTF-8'?>
 <project>
   <actions/>
-  <description>Install test for the juju charm for $charm_name</description>
+  <description>Charm tests for $charm_name</description>
   <keepDependencies>false</keepDependencies>
   <properties/>
   <scm class="hudson.scm.NullSCM"/>
