Added separate graph and unit tests.

--- a/templates/job-config.xml
+++ b/templates/job-config.xml
@@ -1,55 +1,1 @@
-<?xml version='1.0' encoding='UTF-8'?>
-<project>
-  <actions/>
-  <description>Charm tests for $charm_name</description>
-  <keepDependencies>false</keepDependencies>
-  <properties/>
-  <scm class="hudson.scm.NullSCM"/>
-  <quietPeriod>120</quietPeriod>
-  <canRoam>true</canRoam>
-  <disabled>false</disabled>
-  <blockBuildWhenDownstreamBuilding>false</blockBuildWhenDownstreamBuilding>
-  <blockBuildWhenUpstreamBuilding>false</blockBuildWhenUpstreamBuilding>
-  <authToken>$API_TOKEN</authToken>
-  <triggers class="vector"/>
-  <concurrentBuild>false</concurrentBuild>
-  <builders>
-    <hudson.tasks.Shell>
-      <command>#!/bin/bash
-export HOME=\$JENKINS_HOME
-#if $juju_env
-export JUJU_ENV=$juju_env
-#end if
-timeout 2000s sudo -HEsu $user \$HOME/bin/charm-test $charm_name
-      </command>
-    </hudson.tasks.Shell>
-  </builders>
-  <publishers>
-    <hudson.tasks.ArtifactArchiver>
-      <artifacts>**/*.zip,**/*.tar.gz,charm-revision</artifacts>
-      <latestOnly>false</latestOnly>
-    </hudson.tasks.ArtifactArchiver>
-#if $ircbot_enabled:
-    <hudson.plugins.ircbot.IrcPublisher>
-      <targets class="java.util.Collections\$EmptyList"/>
-      <strategy>FAILURE_AND_FIXED</strategy>
-      <notifyOnBuildStart>false</notifyOnBuildStart>
-      <notifySuspects>false</notifySuspects>
-      <notifyCulprits>false</notifyCulprits>
-      <notifyFixers>false</notifyFixers>
-      <notifyUpstreamCommitters>false</notifyUpstreamCommitters>
-      <buildToChatNotifier class="hudson.plugins.im.build_notify.SummaryOnlyBuildToChatNotifier"/>
-      <matrixMultiplier>ONLY_CONFIGURATIONS</matrixMultiplier>
-      <channels/>
-    </hudson.plugins.ircbot.IrcPublisher>
-#end if
-#if $build_publisher_enabled:
-    <hudson.plugins.build__publisher.BuildPublisher>
-      <publishUnstableBuilds>true</publishUnstableBuilds>
-      <publishFailedBuilds>true</publishFailedBuilds>
-      <postActions class="vector"/>
-    </hudson.plugins.build__publisher.BuildPublisher>
-#end if
-  </publishers>
-  <buildWrappers/>
-</project>
+job-unit-config.xml
