Better names for job templates

--- a/templates/job-unit-config.xml
+++ b/templates/job-unit-config.xml
@@ -21,6 +21,13 @@ export HOME=\$JENKINS_HOME
 export JUJU_ENV=$juju_env
 #end if
 
+fail() {
+  echo "FAIL"
+  exit 1
+}
+
+yes | juju destroy-environment; echo
+
 charm get $charm_name \$WORKSPACE/$charm_name
 cd \$WORKSPACE/$charm_name
 if [ ! -d tests ]; then
@@ -28,7 +35,7 @@ if [ ! -d tests ]; then
   exit 0
 fi
 
-jitsu test --logdir \$WORKSPACE --verbose --timeout 2000s $charm_name || (echo "FAIL" && exit 1)
+jitsu test --logdir \$WORKSPACE --verbose --timeout 2000s $charm_name || fail
 echo "PASS"
 exit 0
       </command>
