--- a/templates/job-unit-config.xml
+++ b/templates/job-unit-config.xml
@@ -31,7 +31,7 @@ yes | juju destroy-environment; echo
 charm get $charm_name \$WORKSPACE/$charm_name
 cd \$WORKSPACE/$charm_name
 if [ ! -d tests ]; then
-  java -jar \$HOME/jenkins-cli.jar set-build-result unstable
+  java -jar \$HOME/jenkins-cli.jar -s http://localhost:8080 set-build-result unstable
   exit 0
 fi
 
