--- a/templates/job-unit-config.xml
+++ b/templates/job-unit-config.xml
@@ -32,6 +32,7 @@ charm get $charm_name \$WORKSPACE/$charm_name
 cd \$WORKSPACE/$charm_name
 if [ ! -d tests ]; then
   java -jar \$HOME/jenkins-cli.jar -s http://localhost:8080 set-build-result unstable
+  sleep 10
   exit 0
 fi
 
